Improve readability from duplicated code